# keybase-loremipsumbot

./: .gitignore  Dockerfile  Makefile  README.md  entrypoint  pyproject.toml
keybase_loremipsumbot/: __main__.py  commands.py  loremipsumbot.py
