[tool.poetry]
name = "keybase-loremipsumbot"
version = "0.1.0"
description = "Keybase.io lorem ipsum bot"
authors = ["Leonardo Medici"]

[tool.poetry.dependencies]
lorem = "^0.1"
python = "^3.7"
typing-extensions = "^3.7"
pykeybasebot = "^0.2"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allow-prereleases = true}
isort = "^4.3"
flake8 = "^3.7"
mypy = "^0.720.0"
pyyaml = "^5.1"
pyotp = "^2.3"

[tool.poetry.scripts]
loremipsumbot = 'keybase_loremipsumbot.__main__:main'

[tool.isort]
combine_as_imports = true
include_trailing_comma = true
line_length = 88
multi_line_output = 3
known_third_party = "pyotp,yaml"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
